--- a/franco/src/App.css
+++ b/franco/src/App.css
@@ -14,11 +14,10 @@ header{
 }
 
 .card {
-    margin-top: 6rem;
     padding-top: 15px;
     width: 22rem;
     align-items: center;
-    border-radius: 4em;
+    border-radius: 1em;
     text-align: center;
 }
 
@@ -27,8 +26,8 @@ header{
     margin-bottom: 15px;
 }
 
-.nav {
-    font-size: .80rem;
+nav {
+    font-size: .90rem;
     text-align: right;
 }
 
